package com.anniefraz.dissertation.algorithms.GAs.main.fitness;

public interface FitnessMeasurement<T> {

    double measure(T t);


}
