@startuml

title __FITNESS's Class Diagram__\n

  package  {
    package com.anniefraz.dissertation.algorithms.GAs.main {
      package com.anniefraz.dissertation.algorithms.GAs.main.fitness {
        class FitnessEnergy {
            {static} - LOG : Logger
            - testSrcDir : String
            - testBinDir : String
            - output : String
            - result : double
            {static} - userInput : UserInput
            + FitnessEnergy()
            + measure()
            + codeLengthOpacitor()
            + superSimpleJalenOpacitor()
            + bytecodeHistogramOpacitor()
            + getOutput()
            + setOutput()
        }
      }
    }
  }
  

  package  {
    package com.anniefraz.dissertation.algorithms.GAs.main {
      package com.anniefraz.dissertation.algorithms.GAs.main.fitness {
        interface FitnessMeasurement {
            {abstract} + measure()
        }
      }
    }
  }
  

  package  {
    package com.anniefraz.dissertation.algorithms.GAs.main {
      package com.anniefraz.dissertation.algorithms.GAs.main.fitness {
        class FitnessUnitTests {
            {static} - LOG : Logger
            {static} - PATHNAME : String
            + FitnessUnitTests()
            + measure()
        }
      }
    }
  }
  

  FitnessEnergy -up-|> FitnessMeasurement
  FitnessUnitTests -up-|> FitnessMeasurement
  FitnessUnitTests o-- UserInput : userInput


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
